--- a/index.html
+++ b/index.html
@@ -1,41 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="modern-normalize.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="modern-normalize.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>It is a calculator</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="calculator">
-            <div class="display">0</div>
-            <div class="function-container">
-                <div class="numpad-item grow">CLEAR</div>
-                <div class="numpad-item grow">DELETE</div>
-            </div>
-            <div class="numpad-container">
-                <div class="numpad-item">7</div>
-                <div class="numpad-item">8</div>
-                <div class="numpad-item">9</div>
-                <div class="numpad-item">+</div>
-                <div class="numpad-item">4</div>
-                <div class="numpad-item">5</div>
-                <div class="numpad-item">6</div>
-                <div class="numpad-item">-</div>
-                <div class="numpad-item">1</div>
-                <div class="numpad-item">2</div>
-                <div class="numpad-item">3</div>
-                <div class="numpad-item">*</div>
-                <div class="numpad-item">.</div>
-                <div class="numpad-item">0</div>
-                <div class="numpad-item">=</div>
-                <div class="numpad-item">/</div>
-            
-            </div>
+      <!-- <div class="calculator">
+        <h1>CALC GO BRRRRR</h1>
+        <div class="display gloss">0</div>
+        <div class="function-container">
+          <div class="numpad-item grow">CLEAR</div>
+          <div class="numpad-item grow">DELETE</div>
         </div>
+        <div class="numpad-container">
+          <div class="numpad-item">7</div>
+          <div class="numpad-item">8</div>
+          <div class="numpad-item">9</div>
+          <div class="numpad-item">+</div>
+          <div class="numpad-item">4</div>
+          <div class="numpad-item">5</div>
+          <div class="numpad-item">6</div>
+          <div class="numpad-item">-</div>
+          <div class="numpad-item">1</div>
+          <div class="numpad-item">2</div>
+          <div class="numpad-item">3</div>
+          <div class="numpad-item">*</div>
+          <div class="numpad-item">.</div>
+          <div class="numpad-item">0</div>
+          <div class="numpad-item">=</div>
+          <div class="numpad-item">/</div>
+        </div>
+      </div> -->
+
+      <div class="bmo">
+        <div class="bmo-display">
+          <span class="display-nums">0</span>
+        </div>
+        <div class="bmo-text">
+            <span>B</span>
+            <span>M</span>
+            <span>O</span>
+        </div>
+        <div class="function-container">
+          <button class="numpad-item grow">CLEAR</button>
+          <button class="numpad-item grow">DELETE</button>
+        </div>
+        <div class="numpad-container">
+            <button class="numpad-item bmo-yellow">7</button>
+            <button class="numpad-item bmo-yellow">8</button>
+            <button class="numpad-item bmo-yellow">9</button>
+            <button class="numpad-item bmo-blue">+</button>
+            <button class="numpad-item bmo-yellow">4</button>
+            <button class="numpad-item bmo-yellow">5</button>
+            <button class="numpad-item bmo-yellow">6</button>
+            <button class="numpad-item bmo-blue">-</button>
+            <button class="numpad-item bmo-yellow">1</button>
+            <button class="numpad-item bmo-yellow">2</button>
+            <button class="numpad-item bmo-yellow">3</button>
+            <button class="numpad-item bmo-blue">*</button>
+            <button class="numpad-item bmo-green">.</button>
+            <button class="numpad-item bmo-yellow">0</button>
+            <button class="numpad-item bmo-red">=</button>
+            <button class="numpad-item bmo-blue">/</button>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
